# sentinel2-landcover-mapping

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: 01_data_and_spectral_eda.ipynb  02_supervised_baselines.ipynb  03_zeroshot_clip.ipynb  04_fewshot_label_efficiency.ipynb  05_chips_to_map.ipynb  06_explainability_and_failures.ipynb  07_verification_and_ablations.ipynb
outputs/: band_stats.json  landcover_prediction.tif  landcover_prediction_sam.tif  results.json
scripts/: update_readme.py
src/s2map/: __init__.py  bands.py  clip_utils.py  config.py  data.py  evaluate.py  inference.py  models.py  stac.py  train.py  transforms.py  viz.py
tests/: conftest.py  test_bands.py  test_data.py  test_inference.py  test_metrics.py  test_train.py
